<resources>
    <string name="app_name">My Movie Catalogue</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="img_des">Photo Description</string>
    <string name="realese_date">Realese date</string>
    <string name="directors">Directors</string>
    <string name="russo">Anthony Russo, Joe Russo</string>
    <string name="april_25_2018">April 25, 2018</string>
    <string name="detail_photo">Detail Photo</string>
    <string name="des">Bohemian Rhapsody is a foot-stomping celebration of Queen, their music and their extraordinary lead singer Freddie Mercury. Freddie defied stereotypes and shattered convention to become one of the most beloved entertainers on the planet. The film traces the meteoric rise of the band through their iconic songs and revolutionary sound. They reach unparalleled success, but in an unexpected turn Freddie, surrounded by darker influences, shuns Queen in pursuit of his solo career. Having suffered greatly without the collaboration of Queen, Freddie manages to reunite with his bandmates just in time for Live Aid. While bravely facing a recent AIDS diagnosis, Freddie leads the band in one of the greatest performances in the history of rock music. Queen cements a legacy that continues to inspire outsiders, dreamers and music lovers to this day</string>
    <string name="overview">Overview</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="bahasa">Bahasa</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <string-array name="data_movie_photo">
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_preman</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_thegirl</item>
        <item>@drawable/poster_themule</item>
        <item>@drawable/poster_venom</item>
        <item>@drawable/poster_alita</item>
        <item>@drawable/poster_cold_persuit</item>
        <item>@drawable/poster_crimes</item>
        <item>@drawable/poster_marry_queen</item>
        <item>@drawable/poster_master_z</item>
        <item>@drawable/poster_overlord</item>
        <item>@drawable/poster_ralph</item>
        <item>@drawable/poster_serenity</item>
        <item>@drawable/poster_t34</item>
        <item>@drawable/poster_got</item>
        <item>@drawable/poster_breaking</item>
        <item>@drawable/poster_arrow</item>
        <item>@drawable/poster_doom_patrol</item>
        <item>@drawable/poster_dragon_ball</item>
        <item>@drawable/poster_fairytail</item>
        <item>@drawable/poster_family_guy</item>
        <item>@drawable/poster_flash</item>
        <item>@drawable/poster_gotham</item>
        <item>@drawable/poster_grey_anatomy</item>
    </string-array>
    <string-array name="data_movie_title">
        <item>Aquaman</item>
        <item>A Star Is Born</item>
        <item>Avenger Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumble Bee</item>
        <item>Creed II</item>
        <item>Deadpool 2</item>
        <item>How To Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into The Spider Verse</item>
        <item>The Girl In The Spiders Web</item>
        <item>The Mule</item>
        <item>Venom</item>
        <item>Alita: Battle Angel</item>
        <item>Cold Pursuit</item>
        <item>Fantastic Beasts: The Crimes of Grindelwald</item>
        <item>Mary Queen of Scots</item>
        <item>Master Z: The Ip Man Legacy</item>
        <item>Overlord</item>
        <item>Ralph Breaks the Internet</item>
        <item>Serenity</item>
        <item>T-34</item>
        <item>Game of Thrones</item>
        <item>Breaking Bad</item>
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Gotham</item>
        <item>Greys Anatomy</item>
    </string-array>
    <string-array name="data_movie_directors">
        <item>James Wan</item>
        <item>Bradley Cooper</item>
        <item>Anthony Russo, Joe Russo</item>
        <item>Susanne Bier</item>
        <item>Bryan Singer</item>
        <item>Travis Knight</item>
        <item>Steven Caple Jr.</item>
        <item>David Leitch</item>
        <item>Dean DeBlois</item>
        <item>Tatsuya Nagamine</item>
        <item>M. Night Shymalan</item>
        <item>Donnovan Marsh</item>
        <item>Rob Marshall</item>
        <item>Christian Rivers</item>
        <item>Aris Nugraha</item>
        <item>Otto Bathurst</item>
        <item>Peter Ramsey, Bob Persichetti, Rodney Rothman</item>
        <item>Fede Alvarez</item>
        <item>CLint Eastwood</item>
        <item>Ruben Fleischer</item>
        <item>Robert Rodriguez</item>
        <item>Hans Petter Moland</item>
        <item>David Yates</item>
        <item>Josie Rourke</item>
        <item>Yuen Woo-ping</item>
        <item>Julius Avery</item>
        <item>Rich Moore, Phil Johnston</item>
        <item>Steven Knight</item>
        <item>Aleksei Sidorov</item>
        <item>George R. R. Martin, David Benioff, D. B. Weiss, Bryan Cogman, Vanessa Taylor, Jane Espenson, Dave Hill</item>
        <item>Vince Gilligan, Peter Gould, Thomas Schnauz, Moira Walley-Beckett, Sam Catlin, George Mastras</item>
        <item>Sarah Schechter, Wendy Mericle, Andrew Kreisberg, Marc Guggenheim, Greg Berlanti, Beth Schwartz</item>
        <item>Arnold Drake, Bob Haney, Jeremy Carver</item>
        <item>Akira Toriyama</item>
        <item>Hiro Mashima</item>
        <item>Seth MacFarlane</item>
        <item>J.P. Finn, Emily Silver, Brooke Roberts, Dermott Downs, Glen Winter</item>
        <item>Scott White, Rebecca Perry Cutter</item>
        <item>Ann Kindberg, Austin Guzman, Ellen Pompeo, Elisabeth R. Finch, Gabrielle G. Stanton, Harry Werksman, Jeff Rafner</item>
    </string-array>
    <string-array name="data_movie_release">
        <item>December 21, 2018</item>
        <item>October 19, 2018</item>
        <item>April 26, 2019</item>
        <item>November 12, 2018</item>
        <item>October 27, 2018</item>
        <item>December 19, 2018</item>
        <item>November 28, 2018</item>
        <item>May 15, 2018</item>
        <item>January 23, 2019</item>
        <item>November 14, 2018</item>
        <item>January 16, 2019</item>
        <item>October 24, 2018</item>
        <item>December 20, 2018</item>
        <item>December 13, 2018</item>
        <item>January 17, 2019</item>
        <item>November 20, 2018</item>
        <item>December 12, 2018</item>
        <item>November 19, 2018</item>
        <item>March 17, 2019</item>
        <item>October 3, 2018</item>
        <item>February 5, 2019</item>
        <item>February 15, 2019</item>
        <item>November 14, 2018</item>
        <item>December 7, 2018</item>
        <item>December 29, 2018</item>
        <item>November 7, 2018</item>
        <item>November 23, 2018</item>
        <item>February 1, 2019</item>
        <item>December 27, 2018</item>
        <item>April 17, 2011 - May 19, 2019</item>
        <item>January 20, 2008 - April 11, 2013</item>
        <item>October 10, 2012 - Present</item>
        <item>February 15, 2019 - Present</item>
        <item>1984 en dash 1995</item>
        <item>October 12, 2009 - Present</item>
        <item>January 31, 1999 - Present</item>
        <item>October 7, 2014 - Present</item>
        <item>September 22, 2014 - Present</item>
        <item>March 27, 2005 - Present</item>
    </string-array>
</resources>